--- a/public/style.css
+++ b/public/style.css
@@ -51,6 +51,7 @@ section.chat__section {
   flex-direction: column;
   overflow-y: auto;
   padding-top: 40px;
+  margin-bottom: 13px;
 }
 
 .send-message {
